# good-life-assist

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  start.sh
.ai/: 0314.md  0315_channel.md  base_req.md  channel_v2.md  stock_store_model.md
.qoder/specs/: 0314-requirements.md  channel-im-feishu.md  good-life-assistant-init.md  stock-store-module.md
data/: app.db  modules_config.json
server/: config.py  main.py
server/agent/: graph.py  progress.py  router.py  state.py
server/agent/nodes/: stock_agent.py
server/api/: admin.py  channels.py  chat.py
server/api/modules/: stock.py
server/channels/: base.py  registry.py
server/channels/feishu/: channel.py
server/core/: llm.py  log_collector.py  schemas.py
server/data/: modules_config.json
server/db/: crypto.py  migration.py  models.py  repositories.py  service.py  session.py
server/modules/: base.py  registry.py
server/modules/stock/: account.py  analysis.py  cache.py  config.py  connection.py  enums.py  llm_summary.py  module.py  options_wall.py  quote.py  service.py  tools.py  utils.py  watchlist_tools.py
server/modules/stock_store/: fetcher.py  models.py  repository.py  service.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/chat/: ChatInput.tsx  MessageBubble.tsx  MessageList.tsx
web/src/components/layout/: AppLayout.tsx  ChatPanel.tsx  ModulePanel.tsx
web/src/modules/stock/: AnalysisView.tsx  OptionsChainView.tsx  PortfolioView.tsx  StockChart.tsx  (+1 more)
web/src/stores/: chatStore.ts  moduleStore.ts  stockStore.ts
(+8 files in other folders)
